# DREAMv1

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  commit_message.txt  docker-compose.yml  dynamic_negotiation.py  dynamic_negotiation_enhanced.py  federation_collaboration.py  gui.py  higher_level_collaboration.py  hmas_pipeline.py  index.html  main_pipeline.py  messaging_voting.py  prometheus.yml  pyproject.toml  pytest.ini  real_dynamic_negotiation.py  requirements.txt  setup.cfg  step10_monitoring_maintenance_scalability.py  step1_data_ingestion.py  step2_multi_sensory_perception.py  step3_integration_working_memory.py  step4_task_decomposition_routing.py  step5_specialized_processing.py  step6_meta_cognition.py  step7_long_term_memory.py  step8_decision_aggregation.py  step9_feedback_loop.py  test_unified_pipeline.py  unified_pipeline.py
.github/: pull_request_template.md
adaptation/: .env.example  Dockerfile  README.md  __init__.py  adaptation_service.py  config.py  logging.conf  requirements.txt
aggregation/: Dockerfile  README.md  Technical_Documentation.md  aggregation_main.py  aggregation_service.py  config.py  requirements.txt
communication/: Dockerfile  README.md  Technical_Documentation.md  comm_optimization.py  communication_service.py  config.py
config/: default.yaml  development.yaml  production.yaml
deployment/: Dockerfile
docs/: AGI_Framework_Architecture.md  Architecture.md  DeploymentGuide.md  Deployment_Operations.md  DeveloperSetup.md  Ethical_Framework_Safety_Protocols.md  External_Integration.md  GUI_Management_System.md  Implementation_Plan.md  Knowledge_Management.md  LICENSE.txt  Learning_Module_Enhancement.md  Memory_Module_Enhancement.md  Meta_Module_Enhancement.md  Perception_Module_Enhancement.md  README.md  Reasoning_Module_Enhancement.md  Resource_Management.md  Roadmap.md  Scalability_Performance.md  Whitepaper.md  api.md  backup-dr.md  changelog.md  contributing.md  deployment.md  development.md  sdk.md  whitepaper.txt
environment/: environment_manager.py  task_environment.py
examples/: README.md  requirements.txt
feedback/: Dockerfile  README.md  Technical_Documentation.md  config.py  feedback_main.py  feedback_service.py
graph_rl/: Dockerfile  README.md  Technical_Documentation.md  config.py  graph_rl_agent.py  graph_rl_manager.py  requirements.txt
ingestion/: Dockerfile  README.md  Technical_Documentation.md  config.py  ingestion_main.py  ingestion_service.py  requirements.txt
integration/: Dockerfile  README.md  Technical_Documentation.md  config.py  integration_main.py  requirements.txt
learning/: Dockerfile  README.md  Technical_Documentation.md  __init__.py  action_spaces.py  coalition_learning_manager.py  config.py  curriculum_manager.py  learning_agent.py  learning_service.py  (+6 more)
(+197 files in other folders)
